# DiskMark

./: CMakeLists.txt
src/: application.cpp  application.h  applicationsettings.cpp  applicationsettings.h  benchmark.cpp  benchmark.h  global.cpp  global.h  main.cpp
src/qml/: main.qml
src/qml/ui/: AboutDialog.qml  DiskMark.qml  MenuBar.qml  MyButton.qml  MyComboBox.qml  MyProgressBar.qml
